# dynamic-content-rag

./: .gitignore  README.md  pyproject.toml
backend/: crawler.py
backend/api/: app.py  routes.py
backend/config/: config.yaml  settings.py
backend/models/: schemas.py
backend/scripts/: reset_vectors.py  run_api.py  run_ingest.py
backend/services/: auto_ingest.py  cache.py  ingestor.py  rag_engine.py
backend/tests/: test_rag.py
data/crawled/: latest-crypto-news_anchorage_to_phase_out_usdc_agora_usd_citing_risks_20250628_182000.json  latest-crypto-news_bitcoin_treasury_corp_boosts_holdings_to_771_btc_p_20250628_182000.json  latest-crypto-news_bitvavo_secures_a_mica_license_from_the_netherland_20250628_182000.json  latest-crypto-news_coinbase_sets_us_perpetual_style_futures_launch_as_20250628_182000.json  latest-crypto-news_coindesk_weekly_recap_stablecoins_dominate_the_cyc_20250628_182000.json  latest-crypto-news_coindesk_wins_a_polk_award_a_top_journalism_prize__20250628_182000.json  latest-crypto-news_core_scientific_could_top_30_on_coreweave_buyout_d_20250628_182000.json  latest-crypto-news_gemini_rolls_out_tokenized_stocks_in_eu_starting_w_20250628_182000.json  latest-crypto-news_market_wrap_crypto_markets_shrug_off_new_trump_tar_20250628_182000.json  latest-crypto-news_nasdaq_hits_record_while_bitcoin_gold_remain_under_20250628_182000.json  latest-crypto-news_ripple_to_drop_cross_appeal_against_sec_ending_yea_20250628_182000.json  (+19 more)
docker/: docker-compose.yml
frontend/: streamlit_app.py
scripts/: start-services.sh  stop-services.sh
(+3 files in other folders)
